--- a/index.html
+++ b/index.html
@@ -1,1 +1,28 @@
-test
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="css/style.css">
+    <title>Document</title>
+</head>
+<body>
+    <main>
+        <nav class="nav">
+            <div class="nav_item">item1</div>
+            <div class="nav_item">item1</div>
+            <div class="nav_item">item1</div>
+            <div class="nav_item">item1</div>
+            <div class="nav_item">item1</div>
+        </nav>
+        <section>
+            section1
+        </section>
+
+        <section>
+            section2
+        </section>
+    </main>
+</body>
+</html>
