[Adds] git info, [Update] general styles

--- a/index.html
+++ b/index.html
@@ -4,18 +4,23 @@
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Merriweather:ital,wght@0,300;0,700;1,300&display=swap" rel="stylesheet"> 
         <link rel="stylesheet" href="css/style.css">
         <title>Document</title>
     </head>
     <body>
         <main>
-            <header>Unforgettable Gists</header>
-            <nav class="nav">
-                <div class="nav_item nav_item--selected nav_item-git" section="git">Git</div>
-                <div class="nav_item nav_item-html" section="html">HTML</div>
-                <div class="nav_item nav_item-item3" section="item3">item3</div>
-                <div class="nav_item nav_item-item4" section="item4">item4</div>
-                <div class="nav_item nav_item-item5" section="item5">item5</div>
+            <nav>
+                <header>Unforgettable Gists</header>
+                <div class="nav">
+                    <div class="nav_item nav_item--selected nav_item-git" section="git">Git</div>
+                    <div class="nav_item nav_item-html" section="html">HTML</div>
+                    <div class="nav_item nav_item-item3" section="item3">item3</div>
+                    <div class="nav_item nav_item-item4" section="item4">item4</div>
+                    <div class="nav_item nav_item-item5" section="item5">item5</div>
+                </div>
             </nav>
             <section class="section section-git">
                 <div w3-include-html="views/git.html"></div>
