[Add] complete sass content

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             <nav>
                 <header>Unforgettable Gists</header>
                 <div class="nav">
-                    <div class="nav_item nav_item--selected nav_item-git" section="git">Git</div>
+                    <div class="nav_item nav_item-git" section="git">Git</div>
                     <div class="nav_item nav_item-html" section="html">HTML</div>
                     <div class="nav_item nav_item-sass" section="sass">Css-Sass</div>
                     <div class="nav_item nav_item-item4" section="item4">item4</div>
