Fix css autogenerated files

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Merriweather:ital,wght@0,300;0,700;1,300&display=swap" rel="stylesheet"> 
         <link rel="stylesheet" href="css/dot-pulse.css">
-        <link rel="stylesheet" href="css/style.css">
+        <link rel="stylesheet" href="css/main.min.css">
         <title>Document</title>
     </head>
     <body>
@@ -46,8 +46,7 @@
         </main>
         <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script> 
         <script src="js/utils.js"></script>
-        <script>includeHTML()</script>    
-
+        <script>includeHTML()</script>
         <script src="js/main.js"></script>
     </body>
 </html>
