Add about section

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     </head>
     <body>
         <div class="loader">
+            <!-- <img class="img_brya7v"src="brya7v.png" alt="" srcset=""> -->
             <div class="loader_text">Loading</div>
             <div class="dot-pulse"></div>
         </div>
@@ -26,6 +27,7 @@
                     <div class="nav_item nav_item-sass" section="sass">Css-Sass</div>
                     <div class="nav_item nav_item-item4" section="item4">item4</div>
                     <div class="nav_item nav_item-problems" section="problems">Problems</div>
+                    <div class="nav_item nav_item-about" section="about">About</div>
                 </div>
             </nav>
             <section class="section section-git">
@@ -42,6 +44,9 @@
             </section>
             <section class="section section-problems">
                 <div w3-include-html="views/problems.html"></div>
+            </section>
+            <section class="section section-about">
+                <div w3-include-html="views/about.html"></div>
             </section>
         </main>
         <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script> 
