Fix def3 submenu structure script

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                     <div class="nav_item nav_item-git" section="git">Git</div>
                     <div class="nav_item nav_item-html" section="html">HTML</div>
                     <div class="nav_item nav_item-sass" section="sass">Css-Sass</div>
-                    <div class="nav_item nav_item-item4" section="item4">item4</div>
+                    <div class="nav_item nav_item-algorithms" section="algorithms">Data S. and algorithms</div>
                     <div class="nav_item nav_item-problems" section="problems">Problems</div>
                     <div class="nav_item nav_item-about" section="about">About</div>
                 </div>
@@ -39,8 +39,8 @@
             <section class="section section-sass">
                 <div w3-include-html="views/sass.html"></div>
             </section>
-            <section class="section section-item4">
-                <div>ITEM 4</div>
+            <section class="section section-algorithms">
+                <div w3-include-html="views/algorithms.html"></div>
             </section>
             <section class="section section-problems">
                 <div w3-include-html="views/problems.html"></div>
