[Add] algorithms scrtion and data

--- a/index.html
+++ b/index.html
@@ -25,7 +25,8 @@
                     <div class="nav_item nav_item-git" section="git">Git</div>
                     <div class="nav_item nav_item-html" section="html">HTML</div>
                     <div class="nav_item nav_item-sass" section="sass">Css-Sass</div>
-                    <div class="nav_item nav_item-algorithms" section="algorithms">Data S. and algorithms</div>
+                    <div class="nav_item nav_item-dataStructures" section="dataStructures">Data structures</div>
+                    <div class="nav_item nav_item-algorithms" section="algorithms">Algorithms</div>
                     <div class="nav_item nav_item-problems" section="problems">Problems</div>
                     <div class="nav_item nav_item-about" section="about">About</div>
                 </div>
@@ -38,6 +39,9 @@
             </section>
             <section class="section section-sass">
                 <div w3-include-html="views/sass.html"></div>
+            </section>
+            <section class="section section-dataStructures">
+                <div w3-include-html="views/dataStructures.html"></div>
             </section>
             <section class="section section-algorithms">
                 <div w3-include-html="views/algorithms.html"></div>
