[Add] design patters page and Solid intro

--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
                     <div class="nav_item nav_item-sass" section="sass">Css-Sass</div>
                     <div class="nav_item nav_item-dataStructures" section="dataStructures">Data structures</div>
                     <div class="nav_item nav_item-algorithms" section="algorithms">Algorithms</div>
+                    <div class="nav_item nav_item-designPatterns" section="designPatterns">Design Patterns</div>
                     <div class="nav_item nav_item-problems" section="problems">Problems</div>
                     <div class="nav_item nav_item-about" section="about">About</div>
                 </div>
@@ -45,6 +46,9 @@
             </section>
             <section class="section section-algorithms">
                 <div w3-include-html="views/algorithms.html"></div>
+            </section>
+            <section class="section section-designPatterns">
+                <div w3-include-html="views/designPatterns.html"></div>
             </section>
             <section class="section section-problems">
                 <div w3-include-html="views/problems.html"></div>
