[Update] Problems file structure and Design Patterns file structure

--- a/index.html
+++ b/index.html
@@ -42,16 +42,16 @@
                 <div w3-include-html="views/sass.html"></div>
             </section>
             <section class="section section-dataStructures">
-                <div w3-include-html="views/dataStructures.html"></div>
+                <div w3-include-html="views/dataStructures/dataStructures.html"></div>
             </section>
             <section class="section section-algorithms">
                 <div w3-include-html="views/algorithms.html"></div>
             </section>
             <section class="section section-designPatterns">
-                <div w3-include-html="views/designPatterns.html"></div>
+                <div w3-include-html="views/designPatterns/designPatterns.html"></div>
             </section>
             <section class="section section-problems">
-                <div w3-include-html="views/problems.html"></div>
+                <div w3-include-html="views/problems/problems.html"></div>
             </section>
             <section class="section section-about">
                 <div w3-include-html="views/about.html"></div>
