Adds arch patterns

--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
                     <div class="nav_item nav_item-algorithms" section="algorithms">Algorithms</div>
                     <div class="nav_item nav_item-designPatterns" section="designPatterns">Design Patterns</div>
                     <div class="nav_item nav_item-problems" section="problems">Problems</div>
+                    <div class="nav_item nav_item-problems" section="architecture">Architecture Patterns</div>
                     <div class="nav_item nav_item-about" section="about">About</div>
                 </div>
             </nav>
@@ -52,6 +53,9 @@
             </section>
             <section class="section section-problems">
                 <div w3-include-html="views/problems/problems.html"></div>
+            </section>
+            <section class="section section-architecture">
+                <div w3-include-html="views/architecturePatterns.html"></div>
             </section>
             <section class="section section-about">
                 <div w3-include-html="views/about.html"></div>
